--- a/hw3/04-grid.html
+++ b/hw3/04-grid.html
@@ -12,8 +12,13 @@
     <main>
       <h1>04 - CSS Grid</h1>
       <section class="grid-container grid-container-2">
-        <div class="grid-item item1">1</div>
-        <div class="grid-item item2">2</div>
+        <div class="grid-item item1">Header</div>
+        <div class="grid-item item2">Jumbotron</div>
+        <div class="grid-item item3">Card 1</div>
+        <div class="grid-item item4">Card 2</div>
+        <div class="grid-item item5">Card 3</div>
+        <div class="grid-item item6">Section</div>
+        <div class="grid-item item7">Footer</div>
       </section>
     </main>
   </body>
