--- a/hw3/05-bootstrap-grid.html
+++ b/hw3/05-bootstrap-grid.html
@@ -5,13 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>05 - Bootstrap Grid</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="hw-styles.css" />
   </head>
   <body>
     <main>
-      <h1>05 - Bootstrap Grid</h1>
-      <!-- Enter your code here -->
+      <h1 class="text-center my-4">05 - Bootstrap Grid</h1>
+      <div class="container bootstrap-grid">
+        <div class="row row1">
+          <div class="col-md-6 col-lg-9"></div>
+          <div class="col-md-6 col-lg-3"></div>
+        </div>
+        <div class="row row2">
+          <div class="col-sm-3 col-lg-6 col-xl-10"></div>
+          <div class="col-sm-9 col-lg-6 col-xl-2"></div>
+        </div>
+        <div class="row row3">
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+        </div>
+        <div class="row row4">
+          <div class="col-sm-12 col-lg-6 col-xl-2"></div>
+          <div class="col-sm-12 col-lg-6 col-xl-2"></div>
+          <div class="col-sm-12 col-lg-6 col-xl-8"></div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
