--- a/hw5/03-beverages.html
+++ b/hw5/03-beverages.html
@@ -6,8 +6,7 @@
     <title>03 - Beverages</title>
     <link
       rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="02-beverages.css" />
