Fix accessibility errors in homework 5

--- a/hw5/02-beverages.html
+++ b/hw5/02-beverages.html
@@ -17,7 +17,13 @@
       <section class="bg-light border rounded w-75 mx-auto my-5 p-3">
         <h1 class="text-center my-5">Non-Alcoholic Drinks</h1>
         <section id="results" class="text-center">
-          <img id="loading" class="mb-5" src="loader.gif" />
+          <img
+            id="loading"
+            class="mb-5"
+            src="loader.gif"
+            alt="gif of a loading element"
+            width="50px"
+          />
         </section>
       </section>
     </main>
