--- a/hw1/03-navbar.html
+++ b/hw1/03-navbar.html
@@ -9,11 +9,11 @@
   <body>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Description</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="01-hello.html">Exercise 01</a></li>
+        <li><a href="02-card.html">Exercise 02</a></li>
+        <li><a href="03-navbar.html">Exercise 03</a></li>
+        <li><a href="04-table.html">Exercise 04</a></li>
+        <li><a href="05-form.html">Exercise 05</a></li>
       </ul>
     </nav>
   </body>
