--- a/hw2/02-card.html
+++ b/hw2/02-card.html
@@ -14,18 +14,15 @@
         <h1 class="heading">Title of Card</h1>
         <img
           class="image"
-          src="http://placekitten.com/200/200"
+          src="http://placekitten.com/220/220"
           alt="image of a kitten"
           width="200"
           height="200"
         />
         <p>
-          Hunt anything that moves brown cats with pink ears yet kitty pounce,
-          trip, faceplant you didn't see that no you didn't definitely didn't
-          lick, lick, lick, and preen away the embarrassment. At four in the
-          morning wake up owner meeeeeeooww scratch at legs and beg for food
-          then cry and yowl until they wake up at two pm jump on window. Paw
-          your face to wake you up in the morning.
+          At four in the morning wake up owner meeeeeeooww scratch at legs and
+          beg for food then cry and yowl until they wake up at two pm jump on
+          window. Paw your face to wake you up in the morning.
         </p>
         <button class="btn">Upvote</button>
       </section>
