--- a/hw2/03-navbar.html
+++ b/hw2/03-navbar.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="03-navbar.css" />
   </head>
   <body>
+    <!-- prettier-ignore -->
     <nav class="navbar">
       <ul class="nav-list">
-        <li class="list-item"><a class="nav-link" href="#">Home</a></li>
-        <li class="list-item"><a class="nav-link" href="#">About</a></li>
-        <li class="list-item"><a class="nav-link" href="#">Description</a></li>
-        <li class="list-item"><a class="nav-link" href="#">Projects</a></li>
-        <li class="list-item"><a class="nav-link" href="#">Contact</a></li>
+        <li class="list-item"><a class="nav-link" href="01-hello.html">Exercise 01</a></li>
+        <li class="list-item"><a class="nav-link" href="02-card.html">Exercise 02</a></li>
+        <li class="list-item"><a class="nav-link" href="03-navbar.html">Exercise 03</a></li>
+        <li class="list-item"><a class="nav-link" href="04-table.html">Exercise 04</a></li>
+        <li class="list-item"><a class="nav-link" href="05-form.html">Exercise 05</a></li>
       </ul>
     </nav>
   </body>
