Update: solutions to form exercise

--- a/hw4/05-form.html
+++ b/hw4/05-form.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <main>
+      <!-- prettier-ignore -->
       <form class="form" action="">
         <h1 class="title">Registration Form</h1>
         <div class="form-element">
@@ -23,12 +24,7 @@
         </div>
         <div class="form-element">
           <label class="input-label" for="password">Password:</label>
-          <input
-            class="input-element"
-            type="password"
-            id="password"
-            name="password"
-          />
+          <input class="input-element" type="password" id="password" name="password" />
         </div>
         <fieldset class="form-element radios">
           <legend>Would you like to sign up for the newsletter?</legend>
