--- a/hw2/04-table.html
+++ b/hw2/04-table.html
@@ -11,7 +11,7 @@
   <body>
     <main>
       <h1>TV Listings</h1>
-      <table class="table" border="1">
+      <table class="table">
         <thead>
           <tr class="table-row">
             <th class="table-heading">Time / Channels</th>
