Update solution to 02-card

--- a/hw1/02-card.html
+++ b/hw1/02-card.html
@@ -10,7 +10,12 @@
     <main>
       <section>
         <h1>Title of Card</h1>
-        <img src="http://placekitten.com/200/200" alt="image of a kitten" />
+        <img
+          src="http://placekitten.com/200/200"
+          alt="white kitten with blue sky in the background"
+          width="200px"
+          height="200px"
+        />
         <p>
           Hunt anything that moves brown cats with pink ears yet kitty pounce,
           trip, faceplant you didn't see that no you didn't definitely didn't
