Update solution to 01-hello

--- a/hw2/01-hello.html
+++ b/hw2/01-hello.html
@@ -12,16 +12,16 @@
     <main>
       <section class="container">
         <img
-          class="image"
-          src="http://placekitten.com/200/200"
-          alt="image of a kitten"
+          src="../images/caterina.png"
+          alt="headshot of Caterina with filters"
           width="200"
           height="200"
         />
-        <p class="description">
-          Hi! My name is Spongebob and this is my introduction. I work as a fry
-          cook and I would like to get my drivers license in the near future. In
-          my free time, I enjoy hanging out with my best friend Patrick.
+        <p class="bio">
+          Hi! My name is Caterina and I teach about web development and voice
+          assistants at Portland State University. Prior to teaching, I worked
+          as a software engineer for close to a decade. In my free time, I like
+          to bake, read, and explore the world.
         </p>
       </section>
     </main>
