Update solution to 01-hello

--- a/hw1/01-hello.html
+++ b/hw1/01-hello.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <section class="container">
+      <section>
         <!-- <img
           src="http://placekitten.com/200/200"
           alt="image of a kitten"
