Update solution to 04-table

--- a/hw1/04-table.html
+++ b/hw1/04-table.html
@@ -12,31 +12,31 @@
       <table border="1">
         <thead>
           <tr>
-            <th class="time">Time / Channels</th>
-            <th class="time">8:00 PM</th>
-            <th class="time">9:00 PM</th>
-            <th class="time">10:00 PM</th>
+            <th>Time / Channels</th>
+            <th>8:00 PM</th>
+            <th>9:00 PM</th>
+            <th>10:00 PM</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th class="channel">ABC</th>
+            <th>ABC</th>
             <td>The Goldbergs</td>
             <td>Home Economics</td>
             <td>black-ish</td>
           </tr>
           <tr>
-            <th class="channel">CBS</th>
+            <th>CBS</th>
             <td>Young Sheldon</td>
             <td>United States of Al</td>
             <td>Mom</td>
           </tr>
           <tr>
-            <th class="channel">NBC</th>
+            <th>NBC</th>
             <td colspan="3">Stanley Cup Playoffs</td>
           </tr>
           <tr>
-            <th class="channel">Fox</th>
+            <th>Fox</th>
             <td>Beat Shazam</td>
             <td colspan="2">Local Programming</td>
           </tr>
