--- a/hw2/03-navbar.html
+++ b/hw2/03-navbar.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- prettier-ignore -->
-    <nav class="navbar">
+    <nav>
       <ul class="nav-list">
         <li class="list-item"><a class="nav-link" href="01-hello.html">Exercise 01</a></li>
         <li class="list-item"><a class="nav-link" href="02-card.html">Exercise 02</a></li>
