Update solution to 05-form

--- a/hw2/05-form.html
+++ b/hw2/05-form.html
@@ -29,12 +29,18 @@
             name="password"
           />
         </div>
-        <fieldset class="form-element radios">
-          <legend>Would you like to sign up for the newsletter?</legend>
-          <input type="radio" name="newsletter" id="option1" />
-          <label for="option1">Yes, sign me up</label>
-          <input type="radio" name="newsletter" id="option2" />
-          <label for="option2">No, thank you</label>
+        <fieldset class="form-element">
+          <legend class="input-label">
+            Would you like to sign up for the newsletter?
+          </legend>
+          <div>
+            <input type="radio" name="newsletter" id="option1" />
+            <label for="option1">Yes, sign me up</label>
+          </div>
+          <div>
+            <input type="radio" name="newsletter" id="option2" />
+            <label for="option2">No, thank you</label>
+          </div>
         </fieldset>
         <div class="form-element">
           <label class="input-label" for="date">Date:</label>
