Update: solutions for hw2

--- a/hw2/01-hello.html
+++ b/hw2/01-hello.html
@@ -12,6 +12,7 @@
     <main>
       <section class="container">
         <img
+          class="img"
           src="../images/caterina.png"
           alt="headshot of Caterina with filters"
           width="200"
