Update solutions to hw3

--- a/hw3/01-flex.html
+++ b/hw3/01-flex.html
@@ -10,17 +10,17 @@
   </head>
   <body>
     <main>
-      <h1>01 - Flexbox</h1>
-      <section class="flex-container flex-container-1">
-        <div class="flex-item item1">1</div>
-        <div class="flex-item item2">2</div>
-        <div class="flex-item item3">3</div>
-        <div class="flex-item item4">4</div>
-        <div class="flex-item item5">5</div>
-        <div class="flex-item item6">6</div>
-        <div class="flex-item item7">7</div>
-        <div class="flex-item item8">8</div>
-      </section>
+      <nav>
+        <!-- prettier-ignore -->
+        <ul class="navbar">
+          <!-- <li class="nav-item"><a class="nav-link" href="../hw1/01-hello.html">One</a></li>
+          <li class="nav-item"><a class="nav-link" href="../hw1/02-navbar.html">Two</a></li>
+          <li class="nav-item"><a class="nav-link" href="../hw1/03-form.html">Three</a></li> -->
+          <li class="nav-item"><a class="nav-link" href="01-flex.html">Exercise 01</a></li>
+          <li class="nav-item"><a class="nav-link" href="02-grid.html">Exercise 02</a></li>
+          <li class="nav-item"><a class="nav-link" href="03-bootstrap-form.html">Exercise 03</a></li>
+        </ul>
+      </nav>
     </main>
   </body>
 </html>
