--- a/hw3/03-bootstrap-form.html
+++ b/hw3/03-bootstrap-form.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>06 - Bootstrap Form</title>
+    <title>03 - Bootstrap Form</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="hw-styles.css" />
   </head>
-  <body>
+  <body class="bg-dark">
     <main>
       <form class="bg-light border rounded mx-auto mt-5 p-3">
         <h1 class="h2 text-center text-uppercase mt-2 mb-4">Contact Form</h1>
@@ -54,9 +53,11 @@
             <input type="date" class="form-control" id="date" />
           </div>
         </div>
-        <div class="form-group buttons mt-4">
-          <input type="submit" class="btn btn-md btn-primary" value="Submit" />
-          <input type="reset" class="btn btn-secondary" value="Reset" />
+        <div
+          class="form-group buttons d-flex justify-content-center gap-1 mt-4 mb-2"
+        >
+          <input type="submit" class="btn btn-primary w-25" value="Submit" />
+          <input type="reset" class="btn btn-secondary w-25" value="Reset" />
         </div>
       </form>
     </main>
