--- a/hw3/01-flex.html
+++ b/hw3/01-flex.html
@@ -11,14 +11,16 @@
   <body>
     <main>
       <nav>
-        <!-- prettier-ignore -->
         <ul class="navbar">
-          <!-- <li class="nav-item"><a class="nav-link" href="../hw1/01-hello.html">One</a></li>
-          <li class="nav-item"><a class="nav-link" href="../hw1/02-navbar.html">Two</a></li>
-          <li class="nav-item"><a class="nav-link" href="../hw1/03-form.html">Three</a></li> -->
-          <li class="nav-item"><a class="nav-link" href="01-flex.html">Exercise 01</a></li>
-          <li class="nav-item"><a class="nav-link" href="02-grid.html">Exercise 02</a></li>
-          <li class="nav-item"><a class="nav-link" href="03-bootstrap-form.html">Exercise 03</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="01-flex.html">Exercise 01</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="02-grid.html">Exercise 02</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="03-bootstrap-form.html">Exercise 03</a>
+          </li>
         </ul>
       </nav>
     </main>
