--- a/hw1/01-hello.html
+++ b/hw1/01-hello.html
@@ -5,27 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>01 - Hello</title>
+    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="01-hello.css" />
+    <script defer src="01-hello.js"></script>
   </head>
   <body>
     <main>
-      <section>
-        <!-- <img
-          src="http://placekitten.com/200/200"
-          alt="image of a kitten"
-          width="200"
-          height="200"
-        /> -->
-        <img
-          src="../images/caterina.png"
-          alt="headshot of Caterina with filters"
-          width="200"
-          height="200"
-        />
-        <p>
-          Hi! My name is Caterina and I teach about web development and voice
-          assistants at Portland State University. Prior to teaching, I worked
-          as a software engineer for close to a decade. In my free time, I like
-          to bake, read, and explore the world.
+      <section class="container">
+        <h1>01 - Hello</h1>
+        <img class="img" src="../images/caterina.png" width="200px" />
+        <p class="bio">
+          My name is Caterina and I will be teaching CS 463/563: Intro to Web
+          Development this quarter. Let's get started with the first homework
+          assignment. The first thing we'll do is figure out how to run code
+          checks for accessibility, formatting, and valid HTML and CSS code.
         </p>
       </section>
     </main>
